nuove apparenze di colori

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -58,3 +58,9 @@
     display: block;
     margin: auto;
 }
+#simple-sketch-aural {
+  width: 400px;
+  height: 800px;
+  margin: 0 auto;
+  position: relative;
+}
