--- a/assets/main.scss
+++ b/assets/main.scss
@@ -64,3 +64,10 @@
   margin: 0 auto;
   position: relative;
 }
+
+#pittura {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  position: relative;
+}
